--- a/widmy/templates/home.html
+++ b/widmy/templates/home.html
@@ -26,6 +26,7 @@
 			font-size: 24px;
 			margin: 10px 5px;
 			cursor: pointer;
+            font-weight: bolder;
 		}
     </style>
 </head>
@@ -34,6 +35,9 @@
     <div style="text-align:center;">
         <button onclick="window.location.href='/historiasClinicas/'" style="background-color: rgb(199, 22, 212); color: rgb(15, 15, 15);">Historias Clinicas</button>
         <button onclick="window.location.href='/pacientes/'" style="background-color: rgb(242, 211, 8); color: black;">Pacientes</button>
+        <div>
+            <button onclick="window.location.href='/admin/'" style="background-color: rgb(147, 250, 99); color: black;">Admin</button>
+        </div>
     </div>
 </body>
 
