--- a/widmy/templates/base.html
+++ b/widmy/templates/base.html
@@ -28,10 +28,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/variables/">pacientes</a>
+                    <a class="nav-link" href="/pacientes/">pacientes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/measurements/">historiasClinicas</a>
+                    <a class="nav-link" href="/historias/">historiasClinicas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/adendas/">adendas</a>
                 </li>
             </ul>
 
