--- a/historiasClinicas/templates/historia/historias.html
+++ b/historiasClinicas/templates/historia/historias.html
@@ -4,7 +4,7 @@
 <div class="content">
     <div class="">
         <div class="page-header-title">
-            <h4 class="page-title">Historias Clineicas</h4>
+            <h4 class="page-title">Historias Clinicas</h4>
             <div style="text-align:right;">
                 <button type="button" class="btn btn-success waves-effect waves-light"
                         onClick=" window.location.href='/historiacreate' " style="text-align:center;">+
