--- a/adendas/templates/adenda/adendas.html
+++ b/adendas/templates/adenda/adendas.html
@@ -36,7 +36,7 @@
                         <tr>
                             <td>{{ adenda.historia.paciente.nombre }}</td>
                             <td>{{ adenda.descripcion }}</td>
-                            <td>{{ measurement.dateTime }}</td>
+                            <td>{{ adenda.dateTime }}</td>
                         </tr>
                         {% endfor %}
 
