--- a/historiasClinicas/templates/historia/historias.html
+++ b/historiasClinicas/templates/historia/historias.html
@@ -33,7 +33,7 @@
                         </thead>
                         <tbody>
 
-                        {% for historiaClinica in historiaClinica_list %}
+                        {% for historiaClinica in historia_list %}
                         <tr>
                             <td>{{ historiaClinica.paciente.apellido }}</td>
                             <td>{{ historiaClinica.id }}</td>
