--- a/master/pacientes/templates/pacienteCreate.html
+++ b/master/pacientes/templates/pacienteCreate.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
 {% block content %}
 <form method="POST">
     {% csrf_token %}
@@ -6,7 +7,6 @@
     {{ form.as_p }}
     <button type="submit" class="btn btn-success waves-effect waves-light">Create</button>
     <button type="button" class="btn btn-primary waves-effect waves-light"
-                                onClick=" window.location.href='/historias' ">Back
-    </button>
+            onClick="window.location.href='/pacientes'">Back</button>
 </form>
 {% endblock %}
