--- a/master/pacientes/templates/paciente/pacientes.html
+++ b/master/pacientes/templates/paciente/pacientes.html
@@ -8,7 +8,7 @@
             <h4 class="page-title">Pacientes</h4>
             <div style="text-align:right;">
                 <button type="button" class="btn btn-success waves-effect waves-light"
-                        onClick="window.location.href='/paciente/create'" style="text-align:center;">+
+                        onClick="window.location.href='/pacientecreate'" style="text-align:center;">+
                 </button>
             </div>
         </div>
